--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.1",
+    "@react-three/drei": "^9.68.4",
     "@react-three/fiber": "^8.13.0",
     "@types/three": "^0.152.0",
     "react": "^18.2.0",
